--- a/index.html
+++ b/index.html
@@ -430,7 +430,32 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="subscribe-text">Subscribe</p>
+          <form class="subscribe-form">
+            <input
+              type="text"
+              class="subscribe-form-input"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="contact-form-btn">Subscribe</button>
+          </form>
+        </div>
       </div>
     </footer>
+    <form class="contact-form">
+      <p class="contact-form-header">
+        Leave your contacts and we will call you back
+      </p>
+      <label class="contact-form-label" for="user-name">Name</label>
+      <input type="text" class="contact-form-input" id="user-name" required />
+
+      <label class="contact-form-label" for="user-phone">Phone</label>
+      <input type="text" class="contact-form-input" id="user-phone" required />
+
+      <label class="contact-form-label" for="user-email">Email</label>
+      <input type="text" class="contact-form-input" id="user-email" required />
+      <button type="submit" class="contact-form-btn">Send</button>
+    </form>
   </body>
 </html>
