--- a/index.html
+++ b/index.html
@@ -445,54 +445,62 @@
     </footer>
 
     <div class="backdrop">
-      <div class="modal"></div>
-      <form class="contact-form">
-        <p class="contact-form-header">
-          Leave your contacts and we will call you back
-        </p>
-        <label class="contact-form-label" for="user-name">Name</label>
-        <input
-          type="text"
-          class="contact-form-input"
-          id="user-name"
-          name="user-name"
-          required
-          pattern="[a-zA-Zа-яа-ЯіІїЇєЄ]+"
-          title="Oleksii"
-        />
+      <div class="modal">
+        <svg class="icon icon-close-black-18dp-2-1">
+          <use xlink:href="#icon-close-black-18dp-2-1"></use>
+        </svg>
 
-        <label class="contact-form-label" for="user-phone">Phone</label>
-        <input
-          type="tel"
-          class="contact-form-input"
-          id="user-phone"
-          name="user-phone"
-          required
-          pattern=""
-          [0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}
-          title="xxx-xxx-xx-xx"
-        />
+        <form class="contact-form">
+          <p class="contact-form-header">
+            Leave your contacts and we will call you back
+          </p>
+          <label class="contact-form-label" for="user-name">Name</label>
+          <input
+            type="text"
+            class="contact-form-input"
+            id="user-name"
+            name="user-name"
+            required
+            pattern="[a-zA-Zа-яа-ЯіІїЇєЄ]+"
+            title="Oleksii"
+          />
 
-        <label class="contact-form-label" for="user-email">Email</label>
-        <input
-          type="email"
-          class="contact-form-input"
-          id="user-email"
-          name="user-email"
-          required
-        />
-        <label class="contact-form-label" for="commemt-section">Comment</label>
-        <textarea
-          name="commemt-section"
-          class="contact-form-message"
-          placeholder="Text input"
-        ></textarea>
-        <label
-          ><input type="checkbox" name="agreement" />I accept the terms and
-          conditions of the Privacy Policy</label
-        >
-        <button type="submit" class="contact-form-btn">Send</button>
-      </form>
+          <label class="contact-form-label" for="user-phone">Phone</label>
+          <input
+            type="tel"
+            class="contact-form-input"
+            id="user-phone"
+            name="user-phone"
+            required
+            pattern=""
+            [0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}
+            title="xxx-xxx-xx-xx"
+          />
+
+          <label class="contact-form-label" for="user-email">Email</label>
+          <input
+            type="email"
+            class="contact-form-input"
+            id="user-email"
+            name="user-email"
+            required
+          />
+          <label class="contact-form-label" for="comment-section"
+            >Comment</label
+          >
+          <textarea
+            name="comment-section"
+            id="comment-section"
+            class="contact-form-message"
+            placeholder="Text input"
+          ></textarea>
+          <label
+            ><input type="checkbox" name="agreement" />I accept the terms and
+            conditions of the Privacy Policy</label
+          >
+          <button type="submit" class="contact-form-btn">Send</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
