added button to the form

--- a/index.html
+++ b/index.html
@@ -446,9 +446,16 @@
 
     <div class="backdrop">
       <div class="modal">
-        <svg class="icon icon-close-black-18dp-2-1">
-          <use xlink:href="#icon-close-black-18dp-2-1"></use>
-        </svg>
+        <button class="modal-close-btn">
+          <svg
+            class="icon"
+            width="24"
+            height="24"
+            aria-label="close modal icon"
+          >
+            <use href="./images/icons.svg/#icon-close"></use>
+          </svg>
+        </button>
 
         <form class="contact-form">
           <p class="contact-form-header">
