added styles to the button im modal window

--- a/index.html
+++ b/index.html
@@ -448,9 +448,9 @@
       <div class="modal">
         <button class="modal-close-btn">
           <svg
-            class="icon"
-            width="24"
-            height="24"
+            class="icon-close"
+            width="8"
+            height="8"
             aria-label="close modal icon"
           >
             <use href="./images/icons.svg/#icon-close"></use>
