--- a/index.html
+++ b/index.html
@@ -446,14 +446,14 @@
 
     <div class="backdrop">
       <div class="modal">
-        <button class="modal-close-btn">
+        <button class="modal-close-btn" type="button">
           <svg
             class="icon-close"
             width="8"
             height="8"
             aria-label="close modal icon"
           >
-            <use href="./images/icons.svg/#icon-close"></use>
+            <use href="./images/icons.svg/#icon-close.svg"></use>
           </svg>
         </button>
 
@@ -479,8 +479,7 @@
             id="user-phone"
             name="user-phone"
             required
-            pattern=""
-            [0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}
+            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
             title="xxx-xxx-xx-xx"
           />
 
