--- a/index.html
+++ b/index.html
@@ -461,50 +461,52 @@
           Leave your contacts and we will call you back
         </p>
         <form class="contact-form">
-          <label class="contact-form-label" for="user-name">Name</label>
-          <input
-            type="text"
-            class="contact-form-input"
-            id="user-name"
-            name="user-name"
-            required
-            pattern="[a-zA-Zа-яа-ЯіІїЇєЄ]+"
-            title="Oleksii"
-          />
+          <div class="form-container">
+            <label class="contact-form-label" for="user-name">Name</label>
+            <input
+              type="text"
+              class="contact-form-input"
+              id="user-name"
+              name="user-name"
+              required
+              pattern="[a-zA-Zа-яа-ЯіІїЇєЄ]+"
+              title="Oleksii"
+            />
 
-          <label class="contact-form-label" for="user-phone">Phone</label>
-          <input
-            type="tel"
-            class="contact-form-input"
-            id="user-phone"
-            name="user-phone"
-            required
-            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-            title="xxx-xxx-xx-xx"
-          />
+            <label class="contact-form-label" for="user-phone">Phone</label>
+            <input
+              type="tel"
+              class="contact-form-input"
+              id="user-phone"
+              name="user-phone"
+              required
+              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+              title="xxx-xxx-xx-xx"
+            />
 
-          <label class="contact-form-label" for="user-email">Email</label>
-          <input
-            type="email"
-            class="contact-form-input"
-            id="user-email"
-            name="user-email"
-            required
-          />
-          <label class="contact-form-label" for="comment-section"
-            >Comment</label
-          >
-          <textarea
-            name="comment-section"
-            id="comment-section"
-            class="contact-form-message"
-            placeholder="Text input"
-          ></textarea>
-          <label
-            ><input type="checkbox" name="agreement" />I accept the terms and
-            conditions of the Privacy Policy</label
-          >
-          <button type="submit" class="contact-form-btn">Send</button>
+            <label class="contact-form-label" for="user-email">Email</label>
+            <input
+              type="email"
+              class="contact-form-input"
+              id="user-email"
+              name="user-email"
+              required
+            />
+            <label class="contact-form-label" for="comment-section"
+              >Comment</label
+            >
+            <textarea
+              name="comment-section"
+              id="comment-section"
+              class="contact-form-message"
+              placeholder="Text input"
+            ></textarea>
+            <label
+              ><input type="checkbox" name="agreement" />I accept the terms and
+              conditions of the Privacy Policy</label
+            >
+            <button type="submit" class="contact-form-btn">Send</button>
+          </div>
         </form>
       </div>
     </div>
