--- a/index.html
+++ b/index.html
@@ -463,35 +463,41 @@
         <form class="contact-form">
           <div class="form-container">
             <label class="contact-form-label" for="user-name">Name</label>
-            <input
-              type="text"
-              class="contact-form-input"
-              id="user-name"
-              name="user-name"
-              required
-              pattern="[a-zA-Zа-яа-ЯіІїЇєЄ]+"
-              title="Oleksii"
-            />
+            <div class="contact-form-input">
+              <input
+                type="text"
+                class="contact-form-input"
+                id="user-name"
+                name="user-name"
+                required
+                pattern="[a-zA-Zа-яа-ЯіІїЇєЄ]+"
+                title="Oleksii"
+              />
+            </div>
 
             <label class="contact-form-label" for="user-phone">Phone</label>
-            <input
-              type="tel"
-              class="contact-form-input"
-              id="user-phone"
-              name="user-phone"
-              required
-              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-              title="xxx-xxx-xx-xx"
-            />
+            <div class="contact-form-input">
+              <input
+                type="tel"
+                class="contact-form-input"
+                id="user-phone"
+                name="user-phone"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+            </div>
 
             <label class="contact-form-label" for="user-email">Email</label>
-            <input
-              type="email"
-              class="contact-form-input"
-              id="user-email"
-              name="user-email"
-              required
-            />
+            <div class="contact-form-input">
+              <input
+                type="email"
+                class="contact-form-input"
+                id="user-email"
+                name="user-email"
+                required
+              />
+            </div>
             <label class="contact-form-label" for="comment-section"
               >Comment</label
             >
