--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             height="8"
             aria-label="close modal icon"
           >
-            <use href="./images/icons.svg/#icon-close.svg"></use>
+            <use href="./images/icons.svg#icon-close.svg"></use>
           </svg>
         </button>
 
@@ -464,6 +464,9 @@
           <div class="form-container">
             <label class="contact-form-label" for="user-name">Name</label>
             <div class="contact-form-input">
+              <svg class="icon icon-person-black-18dp-1">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
               <input
                 type="text"
                 class="contact-form-input"
@@ -477,6 +480,9 @@
 
             <label class="contact-form-label" for="user-phone">Phone</label>
             <div class="contact-form-input">
+              <svg class="icon icon-phone">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
               <input
                 type="tel"
                 class="contact-form-input"
@@ -490,6 +496,9 @@
 
             <label class="contact-form-label" for="user-email">Email</label>
             <div class="contact-form-input">
+              <svg class="icon icon-email" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
               <input
                 type="email"
                 class="contact-form-input"
