--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                 pattern="[a-zA-Zа-яа-ЯіІїЇєЄ]+"
                 title="Oleksii"
               />
-              <svg class="icon icon-person-black-18dp-1">
+              <svg class="icon icon-person" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -489,7 +489,7 @@
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
               />
-              <svg class="icon icon-phone">
+              <svg class="icon icon-phone" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
