--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
           Leave your contacts and we will call you back
         </p>
         <form class="contact-form">
-          <div class="form-container">
+          <div class="form-container-for-input">
             <label class="contact-form-label" for="user-name">Name</label>
             <div class="contact-form-input">
               <input
@@ -477,7 +477,9 @@
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
+          </div>
 
+          <div class="form-container-for-input">
             <label class="contact-form-label" for="user-phone">Phone</label>
             <div class="contact-form-input">
               <input
@@ -493,7 +495,9 @@
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
+          </div>
 
+          <div class="form-container-for-input">
             <label class="contact-form-label" for="user-email">Email</label>
             <div class="contact-form-input">
               <input
@@ -507,6 +511,9 @@
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
+          </div>
+
+          <div class="form-container-for-input">
             <label class="contact-form-label" for="comment-section"
               >Comment</label
             >
@@ -516,12 +523,12 @@
               class="contact-form-message"
               placeholder="Text input"
             ></textarea>
-            <label
-              ><input type="checkbox" name="agreement" />I accept the terms and
-              conditions of the Privacy Policy</label
-            >
-            <button type="submit" class="contact-form-btn">Send</button>
           </div>
+          <label
+            ><input type="checkbox" name="agreement" />I accept the terms and
+            conditions of the Privacy Policy</label
+          >
+          <button type="submit" class="contact-form-btn">Send</button>
         </form>
       </div>
     </div>
