--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                 pattern="[a-zA-Zа-яа-ЯіІїЇєЄ]+"
                 title="Oleksii"
               />
-              <svg class="icon icon-person" width="18" height="24">
+              <svg class="icon-form-input" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -491,7 +491,7 @@
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
               />
-              <svg class="icon icon-phone" width="18" height="24">
+              <svg class="icon-form-input" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -507,7 +507,7 @@
                 name="user-email"
                 required
               />
-              <svg class="icon icon-email" width="18" height="24">
+              <svg class="icon-form-input" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
