added div to checkbox area

--- a/index.html
+++ b/index.html
@@ -514,20 +514,22 @@
           </div>
 
           <div class="form-container-for-input">
-            <label class="contact-form-label" for="comment-section"
-              >Comment</label
-            >
+            <label class="contact-form-label" for="user-comment">Comment</label>
             <textarea
-              name="comment-section"
-              id="comment-section"
+              name="user-comment"
+              id="user-comment"
               class="contact-form-message"
               placeholder="Text input"
             ></textarea>
           </div>
-          <label
-            ><input type="checkbox" name="agreement" />I accept the terms and
-            conditions of the Privacy Policy</label
-          >
+
+          <div class="form-checkbox">
+            <label
+              ><input type="checkbox" name="agreement" />I accept the terms and
+              conditions of the Privacy Policy</label
+            >
+          </div>
+
           <button type="submit" class="contact-form-btn">Send</button>
         </form>
       </div>
