--- a/index.html
+++ b/index.html
@@ -524,9 +524,14 @@
           </div>
 
           <div class="form-checkbox">
-            <label
-              ><input type="checkbox" name="agreement" />I accept the terms and
-              conditions of the Privacy Policy</label
+            <input
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+              class="form-checkbox-input visually-hidden"
+            /><label for="user-privacy" class="form-checkbox-label"
+              >I accept the terms and conditions of the Privacy Policy</label
             >
           </div>
 
