changed styles to inputs

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         <form class="contact-form">
           <div class="form-container-for-input">
             <label class="contact-form-label" for="user-name">Name</label>
-            <div class="contact-form-input">
+            <div class="contact-form-input-container">
               <input
                 type="text"
                 class="contact-form-input"
@@ -481,7 +481,7 @@
 
           <div class="form-container-for-input">
             <label class="contact-form-label" for="user-phone">Phone</label>
-            <div class="contact-form-input">
+            <div class="contact-form-input-container">
               <input
                 type="tel"
                 class="contact-form-input"
@@ -499,7 +499,7 @@
 
           <div class="form-container-for-input">
             <label class="contact-form-label" for="user-email">Email</label>
-            <div class="contact-form-input">
+            <div class="contact-form-input-container">
               <input
                 type="email"
                 class="contact-form-input"
