added span to checkbox area

--- a/index.html
+++ b/index.html
@@ -531,7 +531,8 @@
               value="true"
               class="form-checkbox-input visually-hidden"
             /><label for="user-privacy" class="form-checkbox-label"
-              >I accept the terms and conditions of the Privacy Policy</label
+              ><span class="form-checkbox-span"></span>I accept the terms and
+              conditions of the Privacy Policy</label
             >
           </div>
 
