--- a/index.html
+++ b/index.html
@@ -531,8 +531,10 @@
               value="true"
               class="form-checkbox-input visually-hidden"
             /><label for="user-privacy" class="form-checkbox-label"
-              ><span class="form-checkbox-span"></span>I accept the terms and
-              conditions of the Privacy Policy</label
+              ><span class="form-checkbox-span"
+                ><svg class="icon icon-Property-1click">
+                  <use href="./images/icons.svg#icon-checked"></use></svg></span
+              >I accept the terms and conditions of the Privacy Policy</label
             >
           </div>
 
