--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
               class="form-checkbox-input visually-hidden"
             /><label for="user-privacy" class="form-checkbox-label"
               ><span class="form-checkbox-span"
-                ><svg class="icon icon-Property-1click">
+                ><svg class="icon icon-checked" width="10" height="8">
                   <use href="./images/icons.svg#icon-checked"></use></svg></span
               >I accept the terms and conditions of the Privacy Policy</label
             >
