--- a/index.html
+++ b/index.html
@@ -534,7 +534,8 @@
               ><span class="form-checkbox-span"
                 ><svg class="icon icon-checked" width="10" height="8">
                   <use href="./images/icons.svg#icon-checked"></use></svg></span
-              >I accept the terms and conditions of the Privacy Policy</label
+              >I accept the terms and conditions of the
+              <a href="#" class="privacy-policy">Privacy Policy</a></label
             >
           </div>
 
