--- a/index.html
+++ b/index.html
@@ -433,11 +433,15 @@
         <div class="footer-subscribe">
           <p class="subscribe-text">Subscribe</p>
           <form class="subscribe-form">
-            <input
-              type="text"
-              class="subscribe-form-input"
-              placeholder="E-mail"
-            />
+            <label class="subscribe-form-label">
+              <input
+                name="user-email"
+                type="email"
+                class="subscribe-form-input"
+                placeholder="E-mail"
+              />
+            </label>
+
             <button type="submit" class="contact-form-btn">Subscribe</button>
           </form>
         </div>
