changed button in footer

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <!-- <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg
@@ -546,6 +546,6 @@
           <button type="submit" class="contact-form-btn">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
