--- a/index.html
+++ b/index.html
@@ -442,7 +442,11 @@
               />
             </label>
 
-            <button type="submit" class="contact-form-btn">Subscribe</button>
+            <button type="submit" class="contact-form-btn">
+              <svg class="icon icon-footer-plane" width="24" height="24">
+                <use href="./images/icons.svg#icon-plane"></use></svg
+              >Subscribe
+            </button>
           </form>
         </div>
       </div>
