--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
       </div>
     </footer>
 
-    <!-- <div class="backdrop">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg
@@ -550,6 +550,6 @@
           <button type="submit" class="contact-form-btn">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
