--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
             >
           </div>
 
-          <button type="submit" class="contact-form-btn">Send</button>
+          <button type="submit" class="contact-form-btn send">Send</button>
         </form>
       </div>
     </div>
