changed styles in modal

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
             height="8"
             aria-label="close modal icon"
           >
-            <use href="./images/icons.svg#icon-close.svg"></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
 
