--- a/index.html
+++ b/index.html
@@ -443,9 +443,10 @@
             </label>
 
             <button type="submit" class="contact-form-btn">
+              Subscribe
               <svg class="icon icon-footer-plane" width="24" height="24">
-                <use href="./images/icons.svg#icon-plane"></use></svg
-              >Subscribe
+                <use href="./images/icons.svg#icon-plane"></use>
+              </svg>
             </button>
           </form>
         </div>
@@ -541,7 +542,7 @@
             /><label for="user-privacy" class="form-checkbox-label"
               ><span class="form-checkbox-span"
                 ><svg class="icon icon-checked" width="10" height="8">
-                  <use href="./images/icons.svg#icon-checked"></use></svg></span
+                  <use href="./images/icons.svg#check"></use></svg></span
               >I accept the terms and conditions of the
               <a href="#" class="privacy-policy">Privacy Policy</a></label
             >
